--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ button {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
     padding: 0 15px;
@@ -136,4 +136,103 @@ button {
 .burger-icon {
   display: block;
   fill: #2f2f37;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .header-cont-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  .h-logo {
+    padding: 24px 0;
+    margin-right: 120px;
+  }
+
+  .header-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-list-item {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+
+    display: block;
+    padding: 24px 0;
+
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .studio::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
+
+  .header-list-item:hover,
+  .header-list-item:focus,
+  .address-item:hover,
+  .address-item:focus,
+  .header-list-item.studio {
+    color: #404bbf;
+  }
+
+  .address-cont {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    display: block;
+  }
+
+  .address-cont-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .address-item {
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .h-logo {
+    margin-right: 76px;
+  }
+
+  .address-cont-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .address-item {
+    padding: 24px 0;
+
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
