--- a/css/style.css
+++ b/css/style.css
@@ -506,3 +506,123 @@ button {
     width: calc((100% - 72px) / 4);
   }
 }
+
+/*PORTFOLIO*/
+.port-cont {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.port-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  text-transform: capitalize;
+
+  margin-bottom: 72px;
+}
+
+.port-list {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+
+.port-list-item {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.port-list-item-cont {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.port-list-item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+
+  margin-bottom: 8px;
+}
+
+.port-list-item-descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.port-list-item-img-cont {
+  position: relative;
+  overflow: hidden;
+}
+
+.port-list-item-p {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .port-list {
+    flex-wrap: wrap;
+    column-gap: 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex-direction: row;
+    row-gap: 72px;
+  }
+
+  .port-list-item {
+    flex-basis: calc((100% - 24px) / 2);
+    box-shadow: none;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .port-list {
+    row-gap: 48px;
+  }
+
+  .port-list-item {
+    flex-basis: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .port-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  }
+
+  .port-list-item:hover .port-list-item-p {
+    transform: translateY(0%);
+  }
+
+  .port-list-item-p {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+  }
+}
