--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,7 @@ button {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
-  max-width: 1440px;
+    url(../images/people-office-mob.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
@@ -296,6 +295,11 @@ button {
 @media screen and (min-width: 768px) {
   .main-page-cont {
     padding: 112px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office-tab.jpg);
   }
 
   .main-page-title {
@@ -313,6 +317,12 @@ button {
 @media screen and (min-width: 1158px) {
   .main-page-cont {
     padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+    max-width: 1440px;
   }
 
   .main-page-title {
@@ -624,5 +634,295 @@ button {
     width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
+  }
+}
+
+/*FOOTER*/
+.footer-cont {
+  background-color: #2e2f42;
+  padding: 96px 0;
+}
+
+.f-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.f-logo-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.f-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+
+  display: inline-block;
+  margin-bottom: 17.5px;
+}
+
+.f-logo-s {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
+}
+
+.f-logo-sp {
+  color: #f4f4fd;
+}
+
+.footer-descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+
+  max-width: 288px;
+  margin-bottom: 72px;
+}
+
+.f-icon-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-bottom: 72px;
+}
+
+.f-icon-descr {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+
+  margin-bottom: 16px;
+}
+
+.f-icon-list {
+  display: flex;
+  gap: 16px;
+}
+
+.f-icon-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.f-icon-list-a {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.f-icon-list-a:hover {
+  background-color: #31d0aa;
+}
+
+.f-icon-list-a:focus {
+  background-color: #31d0aa;
+}
+
+.f-icon-list-svg {
+  fill: #f4f4fd;
+}
+
+.f-form-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.f-form-desc {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+
+  margin-bottom: 16px;
+}
+
+.f-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.f-email {
+  padding-left: 16px;
+
+  background-color: transparent;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  opacity: 0.3;
+  border: 1px solid #fff;
+  border-radius: 4px;
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+
+  width: 288px;
+  height: 40px;
+}
+
+.f-email::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.footer-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+
+  border: none;
+  border-radius: 4px;
+  background: #4d5ae5;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+
+.footer-button:hover .f-email:hover,
+.footer-button:focus .f-email:focus {
+  background-color: #404bbf;
+}
+
+.f-form-icon {
+  margin-left: 16px;
+  fill: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .f-cont {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    text-align: left;
+    align-items: flex-start;
+
+    padding: 0 108px;
+  }
+
+  .f-logo-cont {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 0;
+  }
+
+  .f-icon-cont {
+    align-items: stretch;
+  }
+
+  .f-logo-cont,
+  .f-icon-cont {
+    flex-basis: calc(50% - 24px);
+    margin-bottom: 0;
+  }
+
+  .footer-descr {
+    max-width: 264px;
+  }
+
+  .f-form-cont {
+    flex-basis: 100%;
+    align-items: baseline;
+  }
+
+  .f-form {
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .f-email {
+    width: 264px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-cont {
+    padding: 100px 0;
+  }
+
+  .f-cont {
+    flex-wrap: nowrap;
+    gap: 0;
+    align-items: baseline;
+
+    max-width: 1154px;
+    padding: 0 15px;
+  }
+
+  .f-logo-cont {
+    margin-right: 120px;
+    padding-bottom: 0;
+  }
+
+  .f-logo-cont,
+  .f-icon-cont {
+    flex-basis: auto;
+  }
+
+  .f-logo {
+    margin-bottom: 16px;
+  }
+
+  .footer-descr {
+    margin-bottom: 0;
+  }
+
+  .f-icon-cont {
+    align-items: normal;
+    margin-bottom: 0;
+  }
+
+  .f-form-cont {
+    align-items: stretch;
+    flex-basis: auto;
+    margin-left: auto;
+  }
+
+  .f-form {
+    align-items: stretch;
+  }
+
+  .f-email {
+    opacity: 1;
   }
 }
